<resources>
    <string name="app_name">Lístok na vlak</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_passenger_type">PassengerTypeActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CLASSIC">OBYČAJNÝ</string>
    <string name="CHILD">DIEŤA -15</string>
    <string name="STUDENT">ŽIAK/ŠTUDENT</string>
    <string name="JUNIOR">JUNIOR RP</string>
    <string name="CLASSICRP">KLASIK RP</string>
    <string name="SENIORRP">SENIOR RP</string>
    <string name="SENIOR62">DÔCHODCA -62</string>
    <string name="SENIOR62PLUS">OBČAN 62+</string>
    <string name="SENIOR70PLUS">OBČAN 70+</string>
    <string name="TZP">ŤZP</string>
    <string name="TZPS">ŤZP-S</string>
    <string name="DOG">PES</string>
    <string name="NO_MORE_TICKETS">Vyčerpaný kontigent.</string>
    <string name="PRICE_WITH_TAX">"Celková cena s DPH: "</string>
    <string name="TOTAL_TIME">"Celkový čas "</string>
    <string name="DEPARTURE">Odchod</string>
    <string name="ARRIVAL">Príchod</string>
    <string name="PLEASE_WAIT">Prosím čakajte...</string>
    <string name="LOADING_STATIONS">Načítavam stanice</string>
    <string name="CHECK_CONNECTION">Skontrolujete svoje internetové pripojenie!</string>
    <string name="PROCESSING_DATA">Spracovávam údaje</string>
    <string name="NoSupportedType">V súčasnosti tento typ lístka nie je podporovaný.</string>
    <string name="ERROR_TITLE">Chyba</string>
    <string name="BUTTON_OK">OK</string>


    <!-- reklama    app   ca-app-pub-9312615750092757~2122501823-->
    <string name="banner_home_footer">ca-app-pub-9312615750092757/9181437022</string>
    <string name="interstitial_full_screen">ca-app-pub-9312615750092757/6552701428</string>
    <string name="WARRNING">Upozornenie</string>
    <string name="NO">NIE</string>
    <string name="YES">ÁNO</string>
    <string name="SURE_DELETE">Skutočne si prajete zmazať cestovný lístok?</string>
    <string name="DELETE_TICKET_FAILED">Lístok sa nepodarilo zmazať.</string>
    <string name="TICKET_DELETE_SUCCESS">Lístok bol úspešne zmazaný.</string>
    <string name="DOWNLOAD_TICKET">Dokončiť a stiahnuť lístok</string>
    <string name="ENTER_STATION_NAME">Zadajte názov stanice...</string>
    <string name="BUY_TICKET">Nákup lístka</string>
    <string name="MY_TICKET">Moje lístky</string>
    <string name="CANNOT_FIND_TRAINS">Nenašli sa žiadne spoje</string>
    <string name="FROM">Odkiaľ</string>
    <string name="DEFAULT_FROM">Žilina</string>
    <string name="TOWN_TO">Kam</string>
    <string name="DEFAULT_TO">Zvolen</string>
    <string name="DATE">Dátum</string>
    <string name="TIME">Čas</string>
    <string name="DEFAULT_TIME">12:00</string>
    <string name="NEXT">Ďalej</string>
    <string name="HINT_NUMBER">1323427</string>
    <string name="REG_NUMBER">Registračné číslo</string>
    <string name="EMAIL">e-mail</string>
    <string name="NAME">Meno</string>
    <string name="SURNAME">Priezvisko</string>
    <string name="AT">\@</string>
    <string name="DEFAULT_TEXT_PRICE">Price</string>
    <string name="DEFAULT_TEXT_DETAILS">Details</string>
    <string name="DEFAULT_DATE">1.1.2017</string>
    <string name="DEFAULT_TEXTVIEW">TextView</string>
    <string name="INFO_TICKET_TEXT">Informácie o lístku</string>
    <string name="UPDATING">Aktualizujem súčasti programu.</string>


</resources>
