<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_select_towns"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16px"
    tools:context="sk.listok.zssk.zssklistok.activities.FindTrainsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container_fragment">

        <fragment
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="sk.listok.zssk.zssklistok.activities.TrainSearchFragment"
            android:id="@+id/fragment"
            tools:layout="@layout/fragment_train_search"
            />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container_fragment_another"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">



    <ScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/txtViewFromText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/FROM"
                        android:textColor="#000000"
                        android:textSize="18sp" />


                    <TextView
                        android:id="@+id/textViewFromTown"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/DEFAULT_FROM"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/txtViewToText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/TOWN_TO"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textViewToTown"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_below="@+id/textView2"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/DEFAULT_TO"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtViewDateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/DATE"
                        android:textColor="#000000"
                        android:textSize="18sp" />


                    <LinearLayout
                        android:id="@+id/areaDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/textViewDate"
                            android:layout_width="150dp"
                            android:layout_height="30dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/DEFAULT_DATE"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtViewTimeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/TIME"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:id="@+id/areaTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/textViewTime"
                            android:layout_width="150dp"
                            android:layout_height="30dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/DEFAULT_TIME"
                            android:textSize="18sp" />


                    </LinearLayout>



                </LinearLayout>

                <!-- pripravene pre najblizsie upravy
                <Button-->
                    <!--android:id="@+id/button6"-->
                    <!--android:layout_width="260dp"-->
                    <!--android:layout_height="120dp"-->
                    <!--android:layout_marginTop="30dp"-->
                    <!--android:layout_marginRight="10dp"-->
                    <!--android:background="@android:color/transparent"-->
                    <!--android:drawableLeft="@drawable/arrow"-->
                    <!--android:layout_weight="0.7"/>-->
            </TableRow>


        </TableLayout>
    </ScrollView>

</FrameLayout>

    <Button
        android:text="@string/NEXT"
        android:background="#ff684A"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nextButtonFind"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ID_ADBANNER"
        android:layout_marginBottom="7dp"
        android:layout_above="@+id/nextButtonFind"
        android:layout_centerHorizontal="true">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
